--- a/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj.filters
+++ b/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj.filters
@@ -1039,5 +1039,6 @@
     <None Include="..\..\src\caffe\layers\st_loss_layer.cu">
       <Filter>src\layers</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
