--- a/caffe-easy/windows-gpu/libcaffe/windows-gpu.vcxproj
+++ b/caffe-easy/windows-gpu/libcaffe/windows-gpu.vcxproj
@@ -358,7 +358,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C140902D-9AB4-4C4E-8684-9077C476CDB7}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>windows-cpu</RootNamespace>
+    <RootNamespace>windows-gpu</RootNamespace>
     <ProjectName>libcaffe</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -379,7 +379,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
-    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA $(CC_CUDA_VERSION).props" />
+    <!--<Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA $(CC_CUDA_VERSION).props" />-->
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -456,6 +456,6 @@ copy ..\..\3rd\staticlib\lmdb\$(Platform)\*.dll ..\..\Build\gpu_cuda$(CC_CUDA_VE
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA $(CC_CUDA_VERSION).targets" />
+    <!--Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA $(CC_CUDA_VERSION).targets" /-->
   </ImportGroup>
 </Project>
